Closed Bug 1591738 Opened 5 years ago Closed 5 years ago

Resource leak in VariableLengthPrefixSet::GetPrefixes() under OOM conditions

Categories

(Core :: Privacy: Anti-Tracking, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla72
Tracking Status
firefox72 --- fixed

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Pushed by eakhgari@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/ae7777acefd8
Fix a few leaks in VariableLengthPrefixSet under OOM conditions; r=dimi
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla72
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: