Bug 1591738 - Fix a few leaks in VariableLengthPrefixSet under OOM conditions; r=dimi

Differential Revision: https://phabricator.services.mozilla.com/D50709